# CoreBT

./: .gitignore  README.md
CLAM/: create_patches_fp.py  patch_all_corebt.sh
CLAM/wsi_core/: WholeSlideImage_v2.py
NeuroVFM/neurovfm/examples/: embed_all_corebt.py  inference_encoder.py
NeuroVFM/neurovfm/linear_probe/: corebt_mri_main.py
eval/: corebt_groundtruth_devset.csv  evaluate_predictions.py  example_submission.csv
experiments/: aggregate_results.py  corebt_fusion_main.py  corebt_histo_main.py  corebt_mri_main.py  everything.txt  models.py  run_all_linear_probes.sh  run_corebt_linear_probes.py
experiments/corebt_linear_probe_v2/: aggregated_results.csv
experiments/corebt_linear_probe_v2/LGG_HGG/: summary.json
experiments/corebt_linear_probe_v2/Level1Class/: summary.json
experiments/corebt_linear_probe_v2/WHOGrade/: summary.json
experiments_mediqa/: README.md  corebt_fusion_main.py  corebt_histo_main.py  corebt_mri_main.py  pyproject.toml  run_corebt_linear_probes.py
experiments_mediqa/dataset_csvs/: test_randomized.csv  train.csv  val_randomized.csv
experiments_mediqa/utils/: add_presence_columns_to_csv.py  collect_final_prediction.py
gigapath/prov-gigapath/: INSTALL_INSTRUCTIONS.md  clean_gigapath.yaml  environment_full.yaml
gigapath/prov-gigapath/demo/: 2_tiling_demo.py  run_gigapath.py  tile_single_slide.py  tileall.py  tileall.sh
gigapath/prov-gigapath/gigapath/: pipeline.py
gigapath/prov-gigapath/linear_probe/: corebt_histo_main.py
gigapath/prov-gigapath/slide_embed/: embed_all_slides.py  embed_all_slides.sh  slide_embed.py
(+55 files in other folders)
