[project]
name = "experiments-mediqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.2",
    "pandas==2.3.3",
    "plotext==5.3.2",
    "scikit-learn==1.5.2",
    "tensorboard==2.20.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
